# ft-solana

./: Anchor.toml  package-lock.json  package.json
assets/: metadata.json
programs/ft-solana/: Cargo.toml
programs/ft-solana/src/: lib.rs
scripts/: initialize.ts
tests/: ft-solana.ts
